--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+MONGODB_CNN= mongodb+srv://user_cafe:cafeuserpassword@miclustercafe.1mqsy.mongodb.net/cafeDB
+
+USER=user_cafe
+PASS=cafeuserpassword
