--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev":"nodemon app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "uuid": "^8.3.2"
   }
 }
